Revision 96 	 2011-02-02 	 change to crontab 
Revision 95 	 2011-02-02 	 Adding mp4tomp3 
Revision 94 	 2011-02-02 	 Adding upload_to_archive.py 
Revision 93 	 2011-01-25 	 Changing laptop.crontab 
Revision 92 	 2011-01-25 	 Lot of changes and cleanup 
Revision 91 	 2010-12-07 	 adding backup_laptop_to_extdrive.sh 
Revision 90 	 2010-12-07 	 Adding move_to_archives.sh 
Revision 89 	 2010-11-29 	 Adding fabric_bash_auto_complete 
Revision 88 	 2010-11-22 	 Chaning crontab 
Revision 87 	 2010-11-21 	 Mercurial related changes 
Revision 86 	 2010-11-20 	 small typo 
Revision 85 	 2010-11-20 	 README 
Revision 84 	 2010-11-18 	 Change to create_revision_file 
Revision 83 	 2010-11-18 	 Lot of changes 
Revision 82 	 2010-11-18 	 Changing name in hgrc 
Revision 81 	 2010-11-17 	 small change 
Revision 80 	 2010-11-01 	 Fixing push_local_repos 
Revision 79 	 2010-11-01 	 General cleanup 
Revision 78 	 2010-11-01 	 Adding script to push all local repos 
Revision 77 	 2010-11-01 	 Fix for pysis cron job 
Revision 76 	 2010-11-01 	 Correcting cron entry for pysis 
Revision 75 	 2010-11-01 	 Deleting unnecessary entries from cron 
Revision 74 	 2010-11-01 	 aliasing py to ipython 2.7 
Revision 73 	 2010-10-21 	 changing virtualenv path 
Revision 72 	 2010-10-21 	 Adding PIP_DOWNLOAD_CACHE to profile 
Revision 71 	 2010-10-19 	 General cleanup 
Revision 70 	 2010-10-18 	 Adding bitbucket2github.sh to crontab 
Revision 69 	 2010-10-18 	 Adding bitbucket2github.sh 
Revision 68 	 2010-10-16 	 Small change to create_revision_file.sh 
Revision 67 	 2010-10-16 	 Changing logic in create_revision_file.sh 
Revision 66 	 2010-10-07 	 Cleanup to sourceforge scripts 
Revision 65 	 2010-09-30 	 Adding github and bitbucket backup to cron 
Revision 64 	 2010-09-30 	 Backup github and bitbucket to sourceforge 
Revision 63 	 2010-09-17 	 Chaning time of dropbox cron to let the mysql backup finish 
Revision 62 	 2010-09-15 	 Fixing path issue in drpbox backup script 