@@ -9,21 +9,18 @@ from fnmatch import fnmatch
 from subprocess import call
 
 # Conf
-bucket = "Youth Convention 2009"
+bucket = "youth-convention-2009"
+title = "Youth Convention"
+date = "2009-12-04"
 creator = "Ramakrishna Mission Vidyalaya"
 website = "http://rmv.ac.in"
-description = bucket + ' by ' + creator + \
+description = title + ' by ' + creator + \
               '. Website : <a href=' + website + '> ' + website + ' </a>'
-date = "2009-12-04"
 
 # get these keys from http://www.archive.org/account/s3.php
 access_key = os.environ['ARCHIVEORG_S3_ACCESS_KEY']
 secret_key = os.environ['ARCHIVEORG_S3_SECRET_KEY']
 
-
-def slugify(string):
-    t = string.lower().split()
-    return '-'.join(t)
 
 def move(item):
     if not os.path.exists('processed/'):
@@ -32,7 +29,7 @@ def move(item):
     shutil.move(item, 'processed/')
 
 
-def upload(item, mediatype, collection, keywords, url):
+def upload(item, mediatype, collection, keywords, url_suffix):
     print 'Processing ' + item
 
     cmd = []
@@ -50,7 +47,7 @@ def upload(item, mediatype, collection, keywords, url):
     add('authorization', ' LOW ' + access_key + ':' + secret_key)
     add('x-archive-meta-mediatype', mediatype)
     add('x-archive-meta-collection', collection)
-    add('x-archive-meta-title', bucket)
+    add('x-archive-meta-title', title)
     add('x-archive-meta-description', description)
     add('x-archive-meta-creator', creator)
     add('x-archive-meta-date', date)
@@ -58,16 +55,16 @@ def upload(item, mediatype, collection, keywords, url):
     add('x-archive-meta-licenseurl', 'http://creativecommons.org/licenses/by-nc/3.0/')
 
     cmd.append('--progress-bar')
-    cmd.append('--max-time')
-    cmd.append('3600')
-    cmd.append('--retry')
-    cmd.append('3')
+    #cmd.append('--max-time')
+    #cmd.append('3600')
+    #cmd.append('--retry')
+    #cmd.append('3')
     #cmd.append('--verbose')
     cmd.append('--output')
     cmd.append(item + '.log')
     cmd.append('--upload-file')
     cmd.append(item)
-    cmd.append('http://s3.us.archive.org/' + url)
+    cmd.append('http://s3.us.archive.org/' + bucket + url_suffix + '/' + item)
 
     try:
         call(cmd)
@@ -82,7 +79,7 @@ def upload(item, mediatype, collection, keywords, url):
 
 
 def get_keywords(pattern, mediatype):
-    kw = [bucket, mediatype, creator]
+    kw = [title, mediatype, creator]
     items = os.listdir(os.curdir) + os.listdir('processed')
     for item in items:
         if fnmatch(item, pattern):
@@ -96,8 +93,7 @@ def process(pattern, mediatype, collection, url_suffix=''):
     keywords = get_keywords(pattern, mediatype)
     for item in os.listdir(os.curdir):
         if fnmatch(item, pattern):
-            url = slugify(bucket) + url_suffix + '/' + slugify(item)
-            upload(item, mediatype, collection, keywords, url)
+            upload(item, mediatype, collection, keywords, url_suffix)
 
 
 def main():
